# mama

./: Cargo.toml  README.md  generate-readme.sh
src/: error.rs  main.rs  task.rs  task_id.rs  task_priority.rs  todo_file.rs
src/commands/: add.rs  complete.rs  help.rs  list.rs  mod.rs  remove.rs  uncomplete.rs  undo.rs  util.rs
