[package]
name = "mama"
version = "0.1.1"
authors = ["Teemu Tervo <teemu.tervo iki.fi>"]
description = "A command line application for managing todo.txt"
keywords = ["todo", "todotxt"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "COPYING"
repository = "https://github.com/teervo/mama/"
edition = "2018"

[dependencies]
colored = "3.0.0"
dirs = "6.0.0"
gregorian = "0.2.4"
iterate = "1.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
terminal_size = "0.4.1"
